--- a/hw1/catalog/catalog.html
+++ b/hw1/catalog/catalog.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="catalog.html">Каталог</a>
-    <a href="">Контакты</a>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus quibusdam fuga necessitatibus et aspernatur
+    <a class="nav_link" href="../index.html">Главная</a>
+    <a class="nav_link" href="catalog.html">Каталог</a>
+    <a class="nav_link" href="">Контакты</a>
+    <h1 class="title">Каталог</h1>
+    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus quibusdam fuga necessitatibus
+        et aspernatur
         ab labore, vel suscipit alias modi fugit rem reprehenderit minus libero nesciunt quod excepturi perferendis. Rem
         dolorum odit quo quasi eveniet quia nihil consequatur beatae aspernatur tempore dignissimos repudiandae, qui hic
         expedita, deleniti fuga id ea laborum. Vel voluptas mollitia sit tempore alias dolorem molestiae voluptatibus
@@ -24,15 +26,18 @@
         et! Cupiditate aliquam rem, iusto amet eum reiciendis ipsam quo maiores eveniet corrupti, eligendi quibusdam!
     </p>
     <img src="../img/croissants-with-cooking-paper.jpg" alt="Круассан классический" width="450">
-    <p><b>Круассан классический</b></p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime neque vero saepe ratione ipsa optio.</p>
+    <p class="text"><b>Круассан классический</b></p>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime neque vero saepe ratione ipsa optio.
+    </p>
     <img src="../img/slice-tasty-tart-with-jam.jpg" alt="Пирог вишневый" width="450">
-    <p><b>Пирог вишневый</b></p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa consequuntur voluptate expedita similique. Quia,
+    <p class="text"><b>Пирог вишневый</b></p>
+    <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa consequuntur voluptate expedita
+        similique. Quia,
         ex.</p>
     <img src="../img/top-view-vegan-baked-products-arrangement.jpg" alt="Круассан с начинкой" width="450">
-    <p><b>Круассан с начинкой</b></p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim illo soluta neque commodi fuga repellat!</p>
+    <p class="text"><b>Круассан с начинкой</b></p>
+    <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim illo soluta neque commodi fuga
+        repellat!</p>
 </body>
 
 </html>
