--- a/hw4/index.html
+++ b/hw4/index.html
@@ -10,13 +10,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
 
     <title>Document</title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="container">
+    <div class="container">
+        <header class="header">
             <nav class="nav">
                 <a class="header__link" href="#">Home</a>
                 <a class="header__link" href="#">About</a>
@@ -24,36 +27,35 @@
                 <a class="header__link" href="#">Blog</a>
                 <a class="header__link" href="#">Contact</a>
             </nav>
-        </div>
 
-    </header>
-    <main class="main">
-        <div class="container flex">
+        </header>
+        <main class="main flex">
             <div class="main__left">
                 <h3 class="subtitle">Next genaretion platform</h3>
                 <h1 class="title">Artificial intelligence & Syber security</h1>
                 <p class="dsc">Lorem ipsum is placeholder text commonly used in the graphic, print, and
                     publishing industries for previewing layouts and visual mockups.</p>
-                <a href="#" class="main__link">Get Started</a>
-                <a href="#" class="main__link">Watch Video</a>
+                <div class="main__btns">
+                    <button class="main__btn mb1">Get Started</button>
+                    <button class="main__btn mb2">
+                        <img src="img/play.png" alt="play" class="mb2_img">
+                        Watch Video</button>
+                </div>
+
             </div>
             <div class="main__right">
-                <img src="img/1.png" alt="Artificial">
+                <img src="img/1.png" alt="Artificial" class="main_right_image">
             </div>
-        </div>
-    </main>
+        </main>
 
-    <section class="logos">
-        <div class="container flex">
-            <img class="product__logo" src="img/400.png" alt="logo">
-            <img class="product__logo" src="img/401.png" alt="logo">
-            <img class="product__logo" src="img/402.png" alt="logo">
-            <img class="product__logo" src="img/403.png" alt="logo">
-        </div>
-    </section>
+        <section class="logos_flex">
+            <img class="product__logo_1 logo" src="img/400.png" alt="logo">
+            <img class="product__logo_2 logo" src="img/401.png" alt="logo">
+            <img class="product__logo_3 logo" src="img/402.png" alt="logo">
+            <img class="product__logo_4 logo" src="img/403.png" alt="logo">
+        </section>
 
-    <section class="info">
-        <div class="container flex">
+        <section class="info flex">
             <div class="info__left">
                 <img class="info__about" src="img/about 4.png" alt="about image">
             </div>
@@ -62,58 +64,67 @@
                 <p class="info__dsc">Lorem ipsum is placeholder text commonly used in the graphic, print, and
                     publishing industries for
                     previewing layouts and visual mockups.</p>
-                <a href="#" class="info__link">Learn More</a>
+                <button class="info__btn">Learn More</button>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section class="blocks">
-        <div class="container grid">
-            <div class="block block1">
-                <img src="img/welcome-1.png" alt="img block1" class="block__img img1">
-                <h3 class="block__title title1">Expert Prespective Agency Awards</h3>
-                <p class="block__dsc dsc1">Lorem ipsum is placeholder text commonly used in print, and publishing
-                    industries for previewing layouts and visual mockups.</p>
-            </div>
-            <div class="block block2">
-                <img src="img/welcome-2.png" alt="img block2" class="block__img img2">
-                <h3 class="block__title title2">Business Prespective Global Agency Awards</h3>
-                <p class="block__dsc dsc2">Lorem ipsum is placeholder text commonly used in print, and publishing
-                    industries for previewing layouts and visual mockups.</p>
-            </div>
-            <div class="block block3">
-                <img src="img/welcome-3.png" alt="img block3" class="block__img img3">
-                <h3 class="block__title title3">Value for Results in Global Agency Awards</h3>
-                <p class="block__dsc dsc3">Lorem ipsum is placeholder text commonly used in print, and publishing
-                    industries for previewing layouts and visual mockups.</p>
-            </div>
-            <div class="block block4">
-                <img src="img/welcome-4.png" alt="img block4" class="block__img img4">
-                <h3 class="block__title title4">In print, and publishing industries for previewing layouts and visual
-                    mockups.</h3>
-                <p class="block__dsc dsc4">Lorem ipsum is placeholder text commonly used in print, and publishing
-                    industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly used
-                    in print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is
-                    placeholder text commonly used in print, and publishing industries for previewing layouts and visual
-                    mockups.</p>
-            </div>
-            <div class="block block5">
-                <img src="img/welcome-5.png" alt="img block5" class="block__img img5">
-                <h3 class="block__title title5">Value for Results in Global Agency Awards</h3>
-                <p class="block__dsc dsc5">Lorem ipsum is placeholder text commonly used in print, and publishing
-                    industries for previewing layouts and visual mockups.</p>
-            </div>
-            <div class="block block6">
-                <img src="img/welcome-6.png" alt="img block6" class="block__img img6">
-                <h3 class="block__title title6">Value for Results in Global Agency Awards</h3>
-                <p class="block__dsc dsc6">Lorem ipsum is placeholder text commonly used in print, and publishing
-                    industries for previewing layouts and visual mockups.</p>
-            </div>
-        </div>
-    </section>
+        <section class="blocks">
 
-    <section class="reviews">
-        <div class="container flex">
+            <div class="blocks_1_2_3 flex">
+
+                <div class="block block1">
+                    <img src="img/welcome-1.png" alt="img block1" class="block__img img1">
+                    <h3 class="block__title title1">Expert Prespective Agency Awards</h3>
+                    <p class="block__dsc dsc1">Lorem ipsum is placeholder text commonly used in print, and publishing
+                        industries for previewing layouts and visual mockups.</p>
+                </div>
+                <div class="block block2">
+                    <img src="img/welcome-2.png" alt="img block2" class="block__img img2">
+                    <h3 class="block__title title2">Business Prespective Global Agency Awards</h3>
+                    <p class="block__dsc dsc2">Lorem ipsum is placeholder text commonly used in print, and publishing
+                        industries for previewing layouts and visual mockups.</p>
+                </div>
+                <div class="block block3">
+                    <img src="img/welcome-3.png" alt="img block3" class="block__img img3">
+                    <h3 class="block__title title3">Value for Results in Global Agency Awards</h3>
+                    <p class="block__dsc dsc3">Lorem ipsum is placeholder text commonly used in print, and publishing
+                        industries for previewing layouts and visual mockups.</p>
+                </div>
+            </div>
+            <div class="blocks_4_5_6 flex">
+                <div class="block block4">
+                    <img src="img/welcome-4.png" alt="img block4" class="block__img img4">
+                    <h3 class="block__title title4">In print, and publishing industries for previewing layouts and
+                        visual
+                        mockups.</h3>
+                    <p class="block__dsc dsc4">Lorem ipsum is placeholder text commonly used in print, and publishing
+                        industries for previewing layouts and visual mockups. Lorem ipsum is placeholder text commonly
+                        used
+                        in print, and publishing industries for previewing layouts and visual mockups. Lorem ipsum is
+                        placeholder text commonly used in print, and publishing industries for previewing layouts and
+                        visual
+                        mockups.</p>
+                </div>
+                <div class="blocks_5_6">
+                    <div class="block block5">
+                        <img src="img/welcome-5.png" alt="img block5" class="block__img img5">
+                        <h3 class="block__title title5">Value for Results in Global Agency Awards</h3>
+                        <p class="block__dsc dsc5">Lorem ipsum is placeholder text commonly used in print, and
+                            publishing
+                            industries for previewing layouts and visual mockups.</p>
+                    </div>
+                    <div class="block block6">
+                        <img src="img/welcome-6.png" alt="img block6" class="block__img img6">
+                        <h3 class="block__title title6">Value for Results in Global Agency Awards</h3>
+                        <p class="block__dsc dsc6">Lorem ipsum is placeholder text commonly used in print, and
+                            publishing
+                            industries for previewing layouts and visual mockups.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="reviews flex">
             <div class="reviews__left__part">
                 <h3 class="review__title">What our clients say about our awesome solutions</h3>
                 <p class="review__dsc">To take a trivial example, which of us ever undertakes laborious physical
@@ -123,41 +134,41 @@
                     publishing .
                 </p>
                 <p class="review__dsc">Lorem ipsum is placeholder previewing layouts and visual mockups.</p>
-                <p class="review__dsc r__dsc4">Lorem ipsum is placeholder text commonly used in the graphic, print, and
+                <p class="review__dsc r__dsc4">Lorem ipsum is placeholder text commonly used in the graphic, print,
+                    and
                     publishing
                     industries for previewing layouts and visual mockups.</p>
             </div>
             <div class="reviews__right__part">
                 <img src="img/about3 1.png" alt="image review" class="review__img">
             </div>
-        </div>
-    </section>
+        </section>
 
-    <footer class="footer">
-        <div class="container flex">
-            <div class="footer__left">
+        <footer class="footer__flex">
+            <div class="footer__left footer_part">
                 <h3 class="footer__left__title">INFORMATION</h3>
                 <div class="contacts">
-                    <div class="email flex">
-                        <img class="email__img" src="img/71.svg" alt="email">
+                    <div class="email flex_con">
+                        <img class="f_left_part_img" src="img/71.svg" alt="email">
                         <p class="contact__dsc">Company@gmail.com.com</p>
                     </div>
-                    <div class="phone flex">
-                        <img class="phone__img" src="img/72.svg" alt="phone">
+                    <div class="phone flex_con">
+                        <img class="f_left_part_img" src="img/72.svg" alt="phone">
                         <p class="contact__dsc">Phone: (064) 332-1233</p>
                     </div>
-                    <div class="location flex">
-                        <img class="loc__img" src="img/73.svg" alt="location">
+                    <div class="location flex_con">
+                        <img class="f_left_part_img" src="img/73.svg" alt="location">
                         <p class="contact__dsc">450 Wall Street, USA, New York</p>
                     </div>
                 </div>
             </div>
-            <div class="footer__center">
+            <div class="footer__center footer_part">
                 <h3 class="footer__title">ABOUT THE STORE</h3>
-                <p class="footer__center__dsc">Lorem ipsum is placeholder text commonly used in the graphic, print, and
+                <p class="footer__center__dsc">Lorem ipsum is placeholder text commonly used in the graphic, print,
+                    and
                     layouts and visual mockups.</p>
             </div>
-            <div class="footer__right">
+            <div class="footer__right footer_part">
                 <h3 class="footer__title">ABOUT THE STORE</h3>
                 <p class="footer__right__dsc">www.company.com</p>
                 <div class="social__web">
@@ -166,8 +177,8 @@
                     <img src="img/sw3.svg" alt="youtube" class="social__web__img">
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
 
 </body>
 
