--- a/hw8/catalog.html
+++ b/hw8/catalog.html
@@ -515,8 +515,25 @@
                     </div>
                 </article>
             </div>
-            <div class="items_btn">
-                <button class="items_btn_broowse_all_btn">Browse All Product</button>
+            <div class="items_pagination">
+                <a class="items_pagination_arrow" href="#"><svg width="8" height="14" viewBox="0 0 8 14" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M7.99512 2L2.99512 7L7.99512 12L6.99512 14L-0.00488281 7L6.99512 0L7.99512 2Z"
+                            fill="black" />
+                    </svg>
+                </a>
+                <a class="items_pagination_link items_pagination_link_active" href="#">1</a>
+                <a class="items_pagination_link" href="#">2</a>
+                <a class="items_pagination_link" href="#">3</a>
+                <a class="items_pagination_link" href="#">4</a>
+                <a class="items_pagination_link" href="#">5</a>
+                <a class="items_pagination_link" href="#">6.....20</a>
+                <a class="items_pagination_arrow" href="#"><svg width="8" height="14" viewBox="0 0 8 14" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M-0.00500488 12L4.995 7L-0.00500488 2L0.994995 0L7.995 7L0.994995 14L-0.00500488 12Z"
+                            fill="black" />
+                    </svg>
+                </a>
             </div>
         </section>
         <section class="advantages center">
