--- a/hw8/cart.html
+++ b/hw8/cart.html
@@ -134,13 +134,15 @@
                 </article>
             </div>
             <div class="cart_right">
-                <h3 class="cart_right_title">SHIPPING ADDRESS</h3>
-                <form class="cart_right_address" action="#">
-                    <input class="cart_right_address_input" type="text" placeholder="City">
-                    <input class="cart_right_address_input" type="text" placeholder="State">
-                    <input class="cart_right_address_input" type="number" placeholder="Postcode / Zip">
-                </form>
-                <button class="cart_right_btn">GET A QUOTE</button>
+                <div class="cart_address">
+                    <h3 class="cart_right_title">SHIPPING ADDRESS</h3>
+                    <form class="cart_right_address-data" action="#">
+                        <input class="cart_right_address-data_input" type="text" placeholder="City">
+                        <input class="cart_right_address-data_input" type="text" placeholder="State">
+                        <input class="cart_right_address-data_input" type="number" placeholder="Postcode / Zip">
+                    </form>
+                    <button class="cart_right_btn">GET A QUOTE</button>
+                </div>
                 <article class="cart_right_checkout">
                     <div class="cart_right_checkout_total">
                         <div class="cart_right_checkout_total_sub">
