--- a/hw8/catalog.html
+++ b/hw8/catalog.html
@@ -100,71 +100,73 @@
             </nav>
         </header>
         <section class="filter_sort center">
-            <details class="filter">
-                <summary class="filter_summary"><span class="filter_summary_text">FILTER</span>
-                    <svg width="15" height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M0.833333 10H4.16667C4.625 10 5 9.625 5 9.16667C5 8.70833 4.625 8.33333 4.16667 8.33333H0.833333C0.375 8.33333 0 8.70833 0 9.16667C0 9.625 0.375 10 0.833333 10ZM0 0.833333C0 1.29167 0.375 1.66667 0.833333 1.66667H14.1667C14.625 1.66667 15 1.29167 15 0.833333C15 0.375 14.625 0 14.1667 0H0.833333C0.375 0 0 0.375 0 0.833333ZM0.833333 5.83333H9.16667C9.625 5.83333 10 5.45833 10 5C10 4.54167 9.625 4.16667 9.16667 4.16667H0.833333C0.375 4.16667 0 4.54167 0 5C0 5.45833 0.375 5.83333 0.833333 5.83333Z"
-                            fill="black" />
-                    </svg>
-                </summary>
-                <div class="filter_items">
-                    <div class="filter_item">
-                        <details class="filter_item_box" open>
-                            <summary class="filter_item_box_name">CATEGORY</summary>
-                            <div class="filter_item_box_links">
-                                <a href="#" class="filter_item_box_link">Accessories</a>
-                                <a href="#" class="filter_item_box_link">Bags</a>
-                                <a href="#" class="filter_item_box_link">Denim</a>
-                                <a href="#" class="filter_item_box_link">Hoodies & Sweatshirts</a>
-                                <a href="#" class="filter_item_box_link">Jackets & Coats</a>
-                                <a href="#" class="filter_item_box_link">Polos</a>
-                                <a href="#" class="filter_item_box_link">Shirts</a>
-                                <a href="#" class="filter_item_box_link">Shoes</a>
-                                <a href="#" class="filter_item_box_link">Sweaters & Knits</a>
-                                <a href="#" class="filter_item_box_link">T-Shirts</a>
-                                <a href="#" class="filter_item_box_link">Tanks</a>
-                            </div>
-                        </details>
+            <div class="filter-box">
+                <details class="filter">
+                    <summary class="filter_summary"><span class="filter_summary_text">FILTER</span>
+                        <svg width="15" height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M0.833333 10H4.16667C4.625 10 5 9.625 5 9.16667C5 8.70833 4.625 8.33333 4.16667 8.33333H0.833333C0.375 8.33333 0 8.70833 0 9.16667C0 9.625 0.375 10 0.833333 10ZM0 0.833333C0 1.29167 0.375 1.66667 0.833333 1.66667H14.1667C14.625 1.66667 15 1.29167 15 0.833333C15 0.375 14.625 0 14.1667 0H0.833333C0.375 0 0 0.375 0 0.833333ZM0.833333 5.83333H9.16667C9.625 5.83333 10 5.45833 10 5C10 4.54167 9.625 4.16667 9.16667 4.16667H0.833333C0.375 4.16667 0 4.54167 0 5C0 5.45833 0.375 5.83333 0.833333 5.83333Z"
+                                fill="black" />
+                        </svg>
+                    </summary>
+                    <div class="filter_items">
+                        <div class="filter_item">
+                            <details class="filter_item_box" open>
+                                <summary class="filter_item_box_name">CATEGORY</summary>
+                                <div class="filter_item_box_links">
+                                    <a href="#" class="filter_item_box_link">Accessories</a>
+                                    <a href="#" class="filter_item_box_link">Bags</a>
+                                    <a href="#" class="filter_item_box_link">Denim</a>
+                                    <a href="#" class="filter_item_box_link">Hoodies & Sweatshirts</a>
+                                    <a href="#" class="filter_item_box_link">Jackets & Coats</a>
+                                    <a href="#" class="filter_item_box_link">Polos</a>
+                                    <a href="#" class="filter_item_box_link">Shirts</a>
+                                    <a href="#" class="filter_item_box_link">Shoes</a>
+                                    <a href="#" class="filter_item_box_link">Sweaters & Knits</a>
+                                    <a href="#" class="filter_item_box_link">T-Shirts</a>
+                                    <a href="#" class="filter_item_box_link">Tanks</a>
+                                </div>
+                            </details>
+                        </div>
+                        <div class="filter_item">
+                            <details class="filter_item_box">
+                                <summary class="filter_item_box_name">BRAND</summary>
+                                <div class="filter_item_box_links">
+                                    <a href="#" class="filter_item_box_link">Accessories</a>
+                                    <a href="#" class="filter_item_box_link">Bags</a>
+                                    <a href="#" class="filter_item_box_link">Denim</a>
+                                    <a href="#" class="filter_item_box_link">Hoodies & Sweatshirts</a>
+                                    <a href="#" class="filter_item_box_link">Jackets & Coats</a>
+                                    <a href="#" class="filter_item_box_link">Polos</a>
+                                    <a href="#" class="filter_item_box_link">Shirts</a>
+                                    <a href="#" class="filter_item_box_link">Shoes</a>
+                                    <a href="#" class="filter_item_box_link">Sweaters & Knits</a>
+                                    <a href="#" class="filter_item_box_link">T-Shirts</a>
+                                    <a href="#" class="filter_item_box_link">Tanks</a>
+                                </div>
+                            </details>
+                        </div>
+                        <div class="filter_item">
+                            <details class="filter_item_box">
+                                <summary class="filter_item_box_name">DESIGNER</summary>
+                                <div class="filter_item_box_links">
+                                    <a href="#" class="filter_item_box_link">Accessories</a>
+                                    <a href="#" class="filter_item_box_link">Bags</a>
+                                    <a href="#" class="filter_item_box_link">Denim</a>
+                                    <a href="#" class="filter_item_box_link">Hoodies & Sweatshirts</a>
+                                    <a href="#" class="filter_item_box_link">Jackets & Coats</a>
+                                    <a href="#" class="filter_item_box_link">Polos</a>
+                                    <a href="#" class="filter_item_box_link">Shirts</a>
+                                    <a href="#" class="filter_item_box_link">Shoes</a>
+                                    <a href="#" class="filter_item_box_link">Sweaters & Knits</a>
+                                    <a href="#" class="filter_item_box_link">T-Shirts</a>
+                                    <a href="#" class="filter_item_box_link">Tanks</a>
+                                </div>
+                            </details>
+                        </div>
                     </div>
-                    <div class="filter_item">
-                        <details class="filter_item_box">
-                            <summary class="filter_item_box_name">BRAND</summary>
-                            <div class="filter_item_box_links">
-                                <a href="#" class="filter_item_box_link">Accessories</a>
-                                <a href="#" class="filter_item_box_link">Bags</a>
-                                <a href="#" class="filter_item_box_link">Denim</a>
-                                <a href="#" class="filter_item_box_link">Hoodies & Sweatshirts</a>
-                                <a href="#" class="filter_item_box_link">Jackets & Coats</a>
-                                <a href="#" class="filter_item_box_link">Polos</a>
-                                <a href="#" class="filter_item_box_link">Shirts</a>
-                                <a href="#" class="filter_item_box_link">Shoes</a>
-                                <a href="#" class="filter_item_box_link">Sweaters & Knits</a>
-                                <a href="#" class="filter_item_box_link">T-Shirts</a>
-                                <a href="#" class="filter_item_box_link">Tanks</a>
-                            </div>
-                        </details>
-                    </div>
-                    <div class="filter_item">
-                        <details class="filter_item_box">
-                            <summary class="filter_item_box_name">DESIGNER</summary>
-                            <div class="filter_item_box_links">
-                                <a href="#" class="filter_item_box_link">Accessories</a>
-                                <a href="#" class="filter_item_box_link">Bags</a>
-                                <a href="#" class="filter_item_box_link">Denim</a>
-                                <a href="#" class="filter_item_box_link">Hoodies & Sweatshirts</a>
-                                <a href="#" class="filter_item_box_link">Jackets & Coats</a>
-                                <a href="#" class="filter_item_box_link">Polos</a>
-                                <a href="#" class="filter_item_box_link">Shirts</a>
-                                <a href="#" class="filter_item_box_link">Shoes</a>
-                                <a href="#" class="filter_item_box_link">Sweaters & Knits</a>
-                                <a href="#" class="filter_item_box_link">T-Shirts</a>
-                                <a href="#" class="filter_item_box_link">Tanks</a>
-                            </div>
-                        </details>
-                    </div>
-                </div>
-            </details>
+                </details>
+            </div>
             <div class="sort">
                 <details class="sort_details">
                     <summary class="sort_criterion"><span class="sort_criterion_name">TRENDING NOW</span><svg width="11"
@@ -250,8 +252,8 @@
             </div>
         </section>
         <section class="items center">
-            <div class="items_showcase">
-                <article class="items_showcase_item items_showcase_item_1">
+            <div class="items_showcase items_showcase-catalog">
+                <article class="items_showcase_item items_showcase_item_1 items_showcase-catalog_item_1">
                     <div class="items_showcase_item_top">
                         <img src="img/item_block1.png" alt="item_1"
                             class="items_showcase_item_img items_showcase_add_to_cart">
@@ -280,7 +282,7 @@
                         <h3 class="items_showcase_item_price">$52.00</h3>
                     </div>
                 </article>
-                <article class="items_showcase_item items_showcase_item_2">
+                <article class="items_showcase_item items_showcase_item_2 items_showcase-catalog_item_2">
                     <div class="items_showcase_item_top">
                         <div class="items_showcase_item_2_image items_showcase_add_to_cart">
                             <img src="img/item_block2_2.png" alt="item_2"
@@ -311,7 +313,7 @@
                         <h3 class="items_showcase_item_price">$52.00</h3>
                     </div>
                 </article>
-                <article class="items_showcase_item items_showcase_item_3">
+                <article class="items_showcase_item items_showcase_item_3 items_showcase-catalog_item_3">
                     <div class="items_showcase_item_top">
                         <img src="img/item_block3.png" alt="item_3"
                             class="items_showcase_item_img items_showcase_add_to_cart">
@@ -340,7 +342,7 @@
                         <h3 class="items_showcase_item_price">$52.00</h3>
                     </div>
                 </article>
-                <article class="items_showcase_item items_showcase_item_4">
+                <article class="items_showcase_item items_showcase_item_4 items_showcase-catalog_item_4">
                     <div class="items_showcase_item_top">
                         <img src="img/item_block4.png" alt="item_4"
                             class="items_showcase_item_img items_showcase_add_to_cart">
@@ -369,7 +371,7 @@
                         <h3 class="items_showcase_item_price">$52.00</h3>
                     </div>
                 </article>
-                <article class="items_showcase_item items_showcase_item_5">
+                <article class="items_showcase_item items_showcase_item_5 items_showcase-catalog_item_5">
                     <div class="items_showcase_item_top">
                         <img src="img/item_block7.png" alt="item_5"
                             class="items_showcase_item_img items_showcase_add_to_cart">
@@ -398,7 +400,7 @@
                         <h3 class="items_showcase_item_price">$52.00</h3>
                     </div>
                 </article>
-                <article class="items_showcase_item items_showcase_item_6">
+                <article class="items_showcase_item items_showcase_item_6 items_showcase-catalog_item_6">
                     <div class="items_showcase_item_top">
                         <img src="img/item_block8.png" alt="item_6"
                             class="items_showcase_item_img items_showcase_add_to_cart">
@@ -427,7 +429,7 @@
                         <h3 class="items_showcase_item_price">$52.00</h3>
                     </div>
                 </article>
-                <article class="items_showcase_item items_showcase_item_7">
+                <article class="items_showcase_item items_showcase_item_7 items_showcase-catalog_item_7">
                     <div class="items_showcase_item_top">
                         <img src="img/item_block9.png" alt="item_7"
                             class="items_showcase_item_img items_showcase_add_to_cart">
