--- a/hw8/product.html
+++ b/hw8/product.html
@@ -190,8 +190,8 @@
             </button>
         </section>
         <section class="items center">
-            <div class="items_showcase">
-                <article class="items_showcase_item items_showcase_item_4">
+            <div class="items_showcase items_showcase-product">
+                <article class="items_showcase_item items_showcase_item_4 items_showcase-product_item_4">
                     <div class="items_showcase_item_top">
                         <img src="img/item_block4.png" alt="item_4"
                             class="items_showcase_item_img items_showcase_add_to_cart">
@@ -220,7 +220,7 @@
                         <h3 class="items_showcase_item_price">$52.00</h3>
                     </div>
                 </article>
-                <article class="items_showcase_item items_showcase_item_3">
+                <article class="items_showcase_item items_showcase_item_3 items_showcase-product_item_3">
                     <div class="items_showcase_item_top">
                         <img src="img/item_block3.png" alt="item_3"
                             class="items_showcase_item_img items_showcase_add_to_cart">
@@ -249,7 +249,7 @@
                         <h3 class="items_showcase_item_price">$52.00</h3>
                     </div>
                 </article>
-                <article class="items_showcase_item items_showcase_item_6">
+                <article class="items_showcase_item items_showcase_item_6 items_showcase-product_item_6">
                     <div class="items_showcase_item_top">
                         <img src="img/item_block6.png" alt="item_6"
                             class="items_showcase_item_img items_showcase_add_to_cart">
